force-app/main/default/objects/OppPriceRequestHeader__c/OppPriceRequestHeader__c.object-meta.xml
<CustomObject>
    <label>Price Request Header</label>
    <nameField>
        <displayFormat>OPRH-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Request Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>