force-app/main/default/objects/OppPriceRequestHeader__c/fields/ApproveCode__c.field-meta.xml
<CustomField>
    <fullName>ApproveCode__c</fullName>
    <description>Stores the approve code of the price request. Stored on the first item approval</description>
    <label>Approve Code</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>