force-app/main/default/objects/OppPriceRequestHeader__c/fields/ApprovedItems__c.field-meta.xml
<CustomField>
    <fullName>ApprovedItems__c</fullName>
    <label>Approved Items</label>
    <summaryFilterItems>
        <field>OppPriceRequestItem__c.Status__c</field>
        <operation>equals</operation>
        <value>APPROVED, APPROVED, PARTIALLY APPROVED</value>
    </summaryFilterItems>
    <summaryForeignKey>OppPriceRequestItem__c.PriceRequestHeader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>