force-app/main/default/objects/OppPriceRequestHeader__c/fields/FactoryWaitingItems__c.field-meta.xml
<CustomField>
    <fullName>FactoryWaitingItems__c</fullName>
    <label>Factory Waiting Items</label>
    <summaryFilterItems>
        <field>OppPriceRequestItem__c.FactoryStatus__c</field>
        <operation>equals</operation>
        <value>NOTSENT</value>
    </summaryFilterItems>
    <summaryForeignKey>OppPriceRequestItem__c.PriceRequestHeader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>