force-app/main/default/objects/OppPriceRequestHeader__c/fields/NeededBy__c.field-meta.xml
<CustomField>
    <fullName>NeededBy__c</fullName>
    <label>Products Needed By</label>
    <required>true</required>
    <type>Date</type>
</CustomField>