force-app/main/default/objects/OppPriceRequestHeader__c/fields/PendingItems__c.field-meta.xml
<CustomField>
    <fullName>PendingItems__c</fullName>
    <label>Pending Items</label>
    <summaryFilterItems>
        <field>OppPriceRequestItem__c.Status__c</field>
        <operation>equals</operation>
        <value>PENDING</value>
    </summaryFilterItems>
    <summaryForeignKey>OppPriceRequestItem__c.PriceRequestHeader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>