force-app/main/default/objects/OppPriceRequestHeader__c/fields/SAPAccountingInfo__c.field-meta.xml
<CustomField>
    <fullName>SAPAccountingInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SAP Accounting Info</label>
    <referenceTo>Sales_Relationship__c</referenceTo>
    <relationshipLabel>Price Request Headers</relationshipLabel>
    <relationshipName>Price_Request_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>