force-app/main/default/objects/OppPriceRequestHeader__c/fields/TotalItems__c.field-meta.xml
<CustomField>
    <fullName>TotalItems__c</fullName>
    <label>Total Items</label>
    <summaryForeignKey>OppPriceRequestItem__c.PriceRequestHeader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>