force-app/main/default/objects/OppPriceRequestHeader__c/fields/WaitingItems__c.field-meta.xml
<CustomField>
    <fullName>WaitingItems__c</fullName>
    <description>Number of Items with no status</description>
    <label>Waiting Items</label>
    <summaryFilterItems>
        <field>OppPriceRequestItem__c.Status__c</field>
        <operation>equals</operation>
        <value>NOT SENT</value>
    </summaryFilterItems>
    <summaryForeignKey>OppPriceRequestItem__c.PriceRequestHeader__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>